# obesity-predictor

./: .env  .gitignore  README.md  pyproject.toml
notebooks/: 02_modeling_experiments.ipynb
obesity_predictor/api/: main_api.py
obesity_predictor/api/routers/: prediction_router.py
obesity_predictor/app/: main_app.py
obesity_predictor/app/assets/: style.css
obesity_predictor/app/pages/: 1_Training_Results.py  2_Model_Comparison.py
obesity_predictor/ci_cd/docker/: Dockerfile.api  Dockerfile.app  docker-compose.yml
obesity_predictor/ci_cd/github/: workflow.yml
obesity_predictor/ci_cd/monitoring/: grafana_dashboard.json  prometheus_config.yml
obesity_predictor/config/: logger_config.py  model_config.yaml  settings.py
obesity_predictor/core/data/: loader.py  splitter.py
obesity_predictor/core/model/: base_trainer.py  catboost_trainer.py  comparator.py  evaluator.py  lightgbm_trainer.py  registry.py  xgboost_trainer.py
obesity_predictor/core/pipeline/: inference_pipeline.py  orchestration.py  training_pipeline.py
obesity_predictor/core/preprocessing/: base_preprocessor.py  inference_preprocessor.py  train_preprocessor.py
obesity_predictor/core/utils/: mlflow_utils.py  serialization.py  visualization.py
obesity_predictor/core/validation/: drift_detector.py  schema_validator.py
tests/: test_api.py  test_drift.py  test_preprocessing.py  test_trainers.py
