[tool.poetry]
name = "obesity-predictor"
version = "0.1.0"
description = "ObesityPredictor: End-to-end Machine Learning and MLOps project for obesity classification."
authors = ["Rostand Surel <rostandsurel@yahoo.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "obesity_predictor" }]


[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.0"
numpy = "^1.26.0"
scikit-learn = "^1.5.0"
catboost = "^1.2.7"
xgboost = "^2.1.1"
lightgbm = "^4.5.0"
mlflow = "^2.16.0"
loguru = "^0.7.2"
python-dotenv = "^1.0.1"
joblib = "^1.4.2"
fastapi = "^0.115.0"
uvicorn = "^0.30.0"
streamlit = "^1.38.0"
plotly = "^5.24.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
black = "^24.8.0"
isort = "^5.13.2"
mypy = "^1.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"